@@ -12,8 +12,9 @@ python-fll (0.9.16) UNRELEASED; urgency=medium
   * only mountvirtfs in command if not mounted and umount if it had to
   * refactor mounting so chroot.nuke umounts all but exit just undoes virtfs
   * add mkfs (extN) compression option
+  * add wrap option to make some kind of bootable iso image
 
- -- Niall Walsh <niallwalsh@celtux.org>  Tue, 05 Aug 2014 21:49:17 +0100
+ -- Niall Walsh <niallwalsh@celtux.org>  Tue, 05 Aug 2014 22:26:14 +0100
 
 python-fll (0.9.15) unstable; urgency=medium
 
